--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link type="text/css" rel="stylesheet" href="style.css" />
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
 <body>
-    <div>
-        Build The Community Your Fans Will Love
+    <div class="illustration-img">
+        <img id="image" src="images/illustration-mockups.svg" alt="">
+    </div>
+    <div class="illustration-txt">
+        <h1>Build The Community <br> Your Fans Will Love</h1>
 
-        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. 
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p> 
     </div>
 
-
-  Register
 
 </body>
 </html>
