--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 
 </head>
 <body>
-    <div class="illustration-img">
-        <img id="image" src="images/illustration-mockups.svg" alt="">
+    <div class="logo-div">
+        <img class="logo" src="images/logo.svg" alt="">
     </div>
-    <div class="illustration-txt">
-        <h1>Build The Community <br> Your Fans Will Love</h1>
+    <div class="flex-container">
+            <div class="illustration-img">
+                <img id="image" src="images/illustration-mockups.svg" alt="">
+            </div>
+            <div class="illustration-txt">
+                <h1>Build The Community <br> Your Fans Will Love</h1>
 
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p> 
+                <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p> 
+            </div>
     </div>
 
 
