--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             </div>
             <div class="illustration-txt">
                 <h1>Build The Community <br> Your Fans Will Love</h1>
-
                 <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p> 
+                <div>
+                    <button class="button">Register</button>
+                </div>
             </div>
     </div>
 
