Added and styled icons on the bottom. Desktop display finalized

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> <!-- Inserting the link to use icons from fontawesome.com --> 
+
     <link type="text/css" rel="stylesheet" href="style.css" />
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
@@ -27,8 +29,11 @@
                     <button class="button">Register</button>
                 </div>
             </div>
+    </div>;
+    <div class="icons">
+        <i class="fab fa-facebook-f icon-style"></i>
+        <i class="fab fa-twitter icon-style"></i>
+        <i class="fab fa-instagram icon-style"></i>
     </div>
-
-
 </body>
 </html>
